# python-adv-hw

./: .gitignore  README.md  pyproject.toml
hw01_CLI/: README.md  nl.py  pyproject.toml  requirements.txt  tail.py
hw01_CLI/artifacts/: README.md
hw01_CLI/inputs/: lorem.txt
hw01_CLI/src/: wc.py
hw02_latex/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
hw02_latex/artifacts/tex/: sample_table.tex  sample_table_figure.tex
hw02_latex/latexgen/: generate_latex.py
hw02_latex/latexgen/elements/: figure.py  table.py
hw02_test/: README.md  main.py  pyproject.toml
hw02_test/artifacts/tex/: sample_table.tex  sample_table_figure.tex
hw03_matrix/: README.md  matrix.py  matrix_numpy_mixin.py  mixins.py  pyproject.toml
hw03_matrix/artifacts/task2/: matrix*num.txt  matrix+num.txt
hw03_matrix/artifacts/task3/: AB.txt  C.txt  CD_true.txt  hash.txt
hw04_multitask/: 01_fib.py  02_integrate.py  03_queue_app.py  README.md  pyproject.toml
hw04_multitask/artifacts/01_fib/: 01_fibonacci_comparison.txt
hw04_multitask/artifacts/02_integrate/: execution_comparison.csv  execution_logs.txt
hw04_multitask/artifacts/03_queue_app/: execution_logs.txt
hw05_async/: README.md
hw05_async/task1_image_loader/: load_img_picsum.py  pyproject.toml
hw05_async/task1_image_loader/artifacts/: log_await.txt
