[project]
name = "hw01-cli"
version = "0.1.0"
description = "Python HW"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fire>=0.7.0"]

[project.scripts]
nl = "src.nl:nl_cli"
tail = "src.tail:tail_cli"
wc = "src.wc:wc_cli"

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
